[gd_scene load_steps=2 format=3 uid="uid://prestigepanel"]

[ext_resource type="Script" path="res://scenes/ui/PrestigePanel.gd" id="1"]

[node name="PrestigePanel" type="Panel"]
script = ExtResource("1")
anchors_preset = 4
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.25
anchor_bottom = 0.3

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="Title" type="Label" parent="VBox"]
text = "Prestige"

[node name="Info" type="Label" parent="VBox"]
text = "Reset for Prestige Leaves and permanent boosts"

[node name="Leaves" type="Label" parent="VBox"]
text = "Leaves: 0"

[node name="BonusList" type="VBoxContainer" parent="VBox"]

[node name="PrestigeButton" type="Button" parent="VBox"]
text = "Prestige Run"

[node name="Summary" type="Label" parent="VBox"]
text = "Bonuses:"
